# cargo-app-fastapi

./: .gitignore  README.md  alembic.ini  docker-compose.yml  pyproject.toml
alembic/: env.py
alembic/versions/: a1b2c3d4e5f6_create_bookings_table.py  b2c3d4e5f6a7_create_routes_and_legs_tables.py  c2e2eafb2951_create_vessels_table.py  c3d4e5f6a7b8_create_shipments_and_audit_trigger.py
app/: cli.py  main.py
app/core/database/: init.py
app/features/bookings/: model.py  router.py  schema.py  service.py
app/features/routes/: model.py  router.py  schema.py  service.py
app/features/shipments/: model.py  router.py  schema.py  service.py
app/features/vessels/: model.py  router.py  schema.py  service.py
app/shared/: api_response.py  ports.py
