[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[project]
name = "fastapi-app"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "alembic>=1.16.5",
    "fastapi>=0.128.0",
    "psycopg2-binary>=2.9.11",
    "sqlalchemy>=2.0.46",
    "uvicorn[standard]>=0.39.0",
]

[project.scripts]
dev = "app.cli:dev"
prod = "app.cli:prod"
docker-build = "app.cli:docker_build"
docker-up = "app.cli:docker_up"

[dependency-groups]
dev = [
    "ruff>=0.14.14",
]

[tool.ruff]
line-length = 88
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "I"]
